--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --white: #ffffff;
-  --black: #000000;
+  --white:#ffffff;
+  --light-black:#212121;
   --blue: #2196f3;
   --medium-grey: #757575;
   --dark-grey: #2F303A;
@@ -8,6 +8,7 @@
   --font-weight: 400;
   --font-size: 14px;
   --letter-spacing: 0.03em;
+    currentColor:var(--light-black);
 }
 
 
@@ -17,7 +18,7 @@ body {
   font-size: var(--font-size);
   letter-spacing: var(--letter-spacing);
   background: var(--white);
-  color: var(--black);
+  color: var(--light-blackblack);
   font-style: normal;
 }
 
@@ -27,7 +28,7 @@ body {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-  color:var(--black)
+  color:var(--light-black)
 }
 
 .footer-logo{
@@ -120,8 +121,7 @@ body {
   font-style: normal;   
 }
 
-.footer-section,
-.first-section {
+.footer-section {
   background: #2F303A;
 }
 
@@ -219,10 +219,9 @@ align-items: center;
 
 .contact-section {
  display: flex;
- flex-wrap: nowrap;
  flex-direction: row;
- justify-content: center;
- gap: 40px;
+ align-items: center;
+ gap: 10px;
  margin: 32px auto 32px auto;
  padding: 0;
 }
@@ -286,6 +285,7 @@ align-items: center;
 }
 
 .last-section h2{
+  color: #212121;
   margin: 94px 0 0 0;
 }
 
@@ -318,7 +318,7 @@ align-items: center;
 
 .footer-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .footer-logo {
@@ -367,6 +367,11 @@ align-items: center;
  .portofolio-list li {
   border: 1px solid #EEEEEE;
 }
+.portofolio-list li:hover{
+  cursor:pointer;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 
 .project-title {
   padding: 0;
@@ -379,3 +384,171 @@ align-items: center;
   margin: 4px 24px 20px 24px;
 }
  
+.envelope,
+.smartphone {
+  fill: var(--medium-grey);
+}
+
+.envelope:hover:hover,
+.envelope:focus,
+.smartphone:hover,
+.smartphone:focus {
+  fill: var(--blue);
+}
+.smartphone {
+  margin-left: 41.5px;
+}
+
+.first-section {
+  background:rgba(47, 48, 58, 0.4);
+  background: url("../images/main-image.jpg")no-repeat;
+  background: 0,0,0,0.8;
+  
+}
+
+
+.what-we-do-icons {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin: 94px auto 0 auto;
+  padding: 0;
+}
+
+.icon {
+  fill:var(--light-black);
+}
+
+.icon:hover {
+  background: #f5f4fa;
+}
+
+.social-media-icons {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  padding: 0;
+  margin: 16px auto 30px auto;
+}
+
+.social-media-icon {
+  fill: #afb1b8;
+}
+
+.social-media-icon:hover {
+  fill: white;
+  stroke: none;
+}
+
+.media-button {
+  background: var(--white);
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+  border: none;
+  transition: background 1s;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.media-button:hover {
+  background: var(--blue);
+}
+
+.customer-section h2 {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.67;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--light-black);
+margin: 94px auto 0 auto;
+}
+
+.customer-icon {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  transition: background 1s;
+}
+
+.logo-icon {
+  fill:#AFB1B8;
+}
+
+.customer-icon:hover{
+  border-color: var(--blue);
+}
+.logo-icon:hover {
+ fill:var(--blue);
+}
+
+.customer-list {
+  list-style: none;
+  display:flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  padding: 0;
+  margin: 50px auto 94px auto;
+}
+.footer {
+  display:flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+.footer-media-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: flex-start;
+  margin: 75px auto 0 0;
+}
+.footer-media-section p {
+ font-weight: 700;
+ font-size: 14px;
+ line-height: 1.14;
+ letter-spacing: 0.03em;
+ text-transform: uppercase;
+ color: #FFFFFF;
+ margin: 0;
+
+
+}
+.footer-social-media-icons {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  padding: 0;
+  margin:0;
+}
+
+.footer-media-button {
+  background: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+  border: none;
+  transition: background 1s;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-media-button:hover {
+  background: var(--blue);
+}
+
+
