--- a/css/style.css
+++ b/css/style.css
@@ -364,14 +364,13 @@ align-items: center;
   height: 294px;
 }
 
- .portofolio-list li {
+.portofolio-list li {
   border: 1px solid #EEEEEE;
 }
 .portofolio-list li:hover{
   cursor:pointer;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 
 .project-title {
   padding: 0;
@@ -387,25 +386,23 @@ align-items: center;
 .envelope,
 .smartphone {
   fill: var(--medium-grey);
+  margin-right: 10px;
 }
+
 
 .envelope:hover:hover,
 .envelope:focus,
 .smartphone:hover,
 .smartphone:focus {
   fill: var(--blue);
-}
-.smartphone {
-  margin-left: 41.5px;
-}
+} 
 
 .first-section {
-  background:rgba(47, 48, 58, 0.4);
-  background: url("../images/main-image.jpg")no-repeat;
-  background: 0,0,0,0.8;
-  
+ background-image: url("../images/main-image.jpg"),
+                   url("../images/overaly-main-image.jpg"),
+                   url("../images/background-main.jpg");
+ background-repeat: no-repeat;
 }
-
 
 .what-we-do-icons {
   list-style: none;
@@ -487,7 +484,9 @@ margin: 94px auto 0 auto;
 
 .customer-icon:hover{
   border-color: var(--blue);
+  cursor: pointer;
 }
+
 .logo-icon:hover {
  fill:var(--blue);
 }
@@ -501,6 +500,7 @@ margin: 94px auto 0 auto;
   padding: 0;
   margin: 50px auto 94px auto;
 }
+
 .footer {
   display:flex;
   flex-direction: row;
@@ -514,6 +514,7 @@ margin: 94px auto 0 auto;
   align-items: flex-start;
   margin: 75px auto 0 0;
 }
+
 .footer-media-section p {
  font-weight: 700;
  font-size: 14px;
@@ -522,9 +523,8 @@ margin: 94px auto 0 auto;
  text-transform: uppercase;
  color: #FFFFFF;
  margin: 0;
-
-
 }
+
 .footer-social-media-icons {
   list-style: none;
   display: flex;
