--- a/css/style.css
+++ b/css/style.css
@@ -398,9 +398,7 @@ align-items: center;
 } 
 
 .first-section {
- background-image: url("../images/main-image.jpg"),
-                   url("../images/overaly-main-image.jpg"),
-                   url("../images/background-main.jpg");
+ background-image: linear-gradient(rgba(47, 48, 58, 0.4) 180%, #C4C4C4 300%), url("../images/main-image.jpg");
  background-repeat: no-repeat;
 }
 
@@ -418,7 +416,7 @@ align-items: center;
   fill:var(--light-black);
 }
 
-.icon:hover {
+.icon {
   background: #f5f4fa;
 }
 
@@ -447,7 +445,7 @@ align-items: center;
   height: 44px;
   border-radius: 22px;
   border: none;
-  transition: background 1s;
+  transition: background 0.3s;
   display:flex;
   align-items: center;
   justify-content: center;
@@ -455,6 +453,7 @@ align-items: center;
 
 .media-button:hover {
   background: var(--blue);
+  cursor: pointer;
 }
 
 .customer-section h2 {
